[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/8bitOperatorPlusSC-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/building_interface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="BuildingInterface" type="Node2D"]
position = Vector2( 0, 0.679001 )
scale = Vector2( 0.414592, 0.414592 )
script = ExtResource( 2 )

[node name="DiceButtons" type="ColorRect" parent="."]
margin_left = 97.0
margin_top = 567.0
margin_right = 585.0
margin_bottom = 1340.0
rect_pivot_offset = Vector2( 98.7322, 353.971 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollDiceButton" type="Button" parent="DiceButtons"]
anchor_left = 1.5634e-08
anchor_top = 1.57918e-07
anchor_right = 1.5634e-08
anchor_bottom = 1.57918e-07
margin_left = 124.889
margin_top = 611.885
margin_right = 331.889
margin_bottom = 699.885
custom_fonts/font = SubResource( 1 )
text = "Roll"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddDiceButton" type="Button" parent="DiceButtons"]
margin_left = 113.599
margin_top = 288.97
margin_right = 347.599
margin_bottom = 376.97
custom_fonts/font = SubResource( 1 )
text = "Add Dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveDiceButton" type="Button" parent="DiceButtons"]
margin_left = 114.053
margin_top = 448.779
margin_right = 347.053
margin_bottom = 536.779
custom_fonts/font = SubResource( 1 )
text = "Remove Dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceNumberLabel" type="Label" parent="DiceButtons"]
anchor_top = -0.00106534
anchor_bottom = -0.00106533
margin_left = 3.8147e-05
margin_top = 4.82225
margin_right = 489.0
margin_bottom = 216.822
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dice Committed: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 1227.0
margin_top = 63.0
margin_right = 1460.0
margin_bottom = 287.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect2"]
anchor_top = -0.00106534
anchor_bottom = -0.00106533
margin_left = 6.0
margin_top = 5.23864
margin_right = 224.0
margin_bottom = 217.239
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Target: 15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 1949.38
margin_top = 544.005
margin_right = 2405.38
margin_bottom = 979.005
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="ColorRect3"]
anchor_top = -0.00106534
anchor_bottom = -0.00106533
margin_left = 6.0
margin_top = 5.46342
margin_right = 448.0
margin_bottom = 217.463
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use Ability

Required: 6"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceRoller" type="Node2D" parent="."]

[node name="DiceSpawner" type="Node2D" parent="DiceRoller"]
position = Vector2( 1268.5, 425.536 )

[node name="StaticBody2D" type="StaticBody2D" parent="DiceRoller"]
position = Vector2( 495.679, 554.158 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DiceRoller/StaticBody2D"]
polygon = PoolVector2Array( 131.343, -209.244, 117.158, 846.49, 1909.11, 849.883, 1899.43, 453.095, 1439.05, 450.33, 1441.81, -218.818, 1415.54, -220.2, 1404.48, 472.451, 1880.07, 471.068, 1885.61, 824.997, 137.422, 822.173, 153.633, -193.033, 1383.63, -201.139, 1379.58, -219.376 )
